# hush-server-node

./: .gitignore
.github/scripts/: run-dotnet-test-projects.sh
.github/workflows/: cd.yml  ci.yml
Node/: Directory.Build.props  Directory.Packages.props  Dockerfile  Dockerfile.dockerignore  HushNode.code-workspace  HushServerNode.sln  README.md  ___Directory.Packages.props___
Node/.qodo/: history.sqlite
Node/HushNode.Blockchain/: HushNode.Blockchain.csproj  (+2 more)
Node/HushNode.Blockchain.Persistency.Abstractions/: HushNode.Blockchain.Persistency.Abstractions.csproj  IBlockRepository.cs  IBlockchainStateRepository.cs  IUnitOfWork.cs
Node/HushNode.Blockchain.Persistency.EntityFramework/: BlockRepository.cs  BlockchainDbContext.cs  BlockchainDbContextConfigurator.cs  BlockchainPersistencyEntityFrameworkHostBuild.cs  BlockchainStateRepository.cs  HushNode.Blockchain.Persistency.EntityFramework.csproj  UnitOfWork.cs  UnitOfWorkFactory.cs
Node/HushNode.Blockchain.Persistency.InMemory/: BlockchainPersistencyInMemoryHostBuilder.cs  HushNode.Blockchain.Persistency.InMemory.csproj
Protos/: greet.proto  hushBank.proto  hushBlockchain.proto  hushElections.proto  hushFeed.proto  hushIdentity.proto  hushNotification.proto  hushProfile.proto  hushReactions.proto  hushUrlMetadata.proto
Tools/HushSp07RustWorker/: Cargo.toml  README.md
Tools/HushSp07RustWorker/src/: main.rs
scripts/: install-feat087-circuit-artifacts.ps1  install-feat097-ceremony-profiles.ps1  run-e2e-blocks.ps1  validate-feat087-nondev-artifacts.ps1  validate-feat097-ceremony-profiles.ps1
(+1797 files in other folders)
